Fix overlaping text on questions orders in the version tab

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,7 +281,6 @@ td {
   margin: 0 3px 3px 3px;
   padding: -0.3em 0 0 2.5em;
   font-size: 1.1em;
-  height: 28px;
 }
 
 .triage-order li span {
